--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "adminpanel",
   "version": "0.1.0",
   "private": true,
+  "license": "ISC",
+  "author": "Grupo LIA",
   "dependencies": {
     "@ant-design/icons": "^4.6.2",
     "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
+    "@testing-library/react": "^12.0.0",
+    "@testing-library/user-event": "^13.0.0",
     "antd": "^4.16.3",
     "axios": "^0.21.1",
     "chart.js": "^3.3.2",
@@ -18,7 +20,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.0",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^2.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
